--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,12 +1,12 @@
 [production]
-phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
-resources.frontController.params.displayExceptions = 0
+resources.frontController.params.displayExceptions = 1
 
 resources.db.adapter = "Pdo_Mysql"
 resources.db.params.host = "localhost"
@@ -17,6 +17,7 @@ resources.db.params.charset = "utf8mb4"
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.modules[] = ""
+resources.view[] =
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 [staging : production]
@@ -31,8 +32,7 @@ resources.db.params.username = "fashion_testing"
 resources.db.params.password = "fashion_testing"
 resources.db.params.dbname = "fashion_testing"
 resources.db.params.charset = "utf8mb4"
-resources.modules[] = ""
-resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+resources.view[] =
 
 [development : production]
 phpSettings.display_startup_errors = 1
@@ -45,5 +45,4 @@ resources.db.params.username = "fashion_testing"
 resources.db.params.password = "fashion_testing"
 resources.db.params.dbname = "fashion_testing"
 resources.db.params.charset = "utf8mb4"
-resources.modules[] = ""
-resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+resources.view[] =
